# core-types

./: .pre-commit-config.yaml  CONTRIBUTING.md  HISTORY.md  README.md  index.html  mkdocs.yml  publish.sh  pyproject.toml  pyrightconfig.json  repo.sh  tox.ini  versions.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  release.yml
0.5.2.dev/: 404.html  index.html  objects.inv
0.5.2.dev/api/: index.html
0.5.2.dev/authors/: index.html
0.5.2.dev/contributing/: index.html
0.5.2.dev/history/: index.html
0.5.2.dev/installation/: index.html
0.5.2.dev/search/: search_index.json
0.5.2.dev/usage/: index.html
0.6/: index.html  objects.inv  sitemap.xml
0.6.1/: index.html  objects.inv  sitemap.xml
0.6.1/api/: index.html
0.6.1/history/: index.html
0.6.1/installation/: index.html
0.6.1/search/: search_index.json
0.6.2/: 404.html  index.html  objects.inv
0.6.2/api/: index.html
0.6.2/authors/: index.html
0.6.2/contributing/: index.html
0.6.2/history/: index.html
0.6.2/search/: search_index.json
0.6.3/api/: index.html
0.6.3/history/: index.html
0.6.3/search/: search_index.json
0.6/api/: index.html
0.6/history/: index.html
0.6/search/: search_index.json
0.6/usage/: index.html
coretypes/: __init__.py  __version__.py  quote_fetcher.py  types.py
coretypes/errors/trade/: __init__.py  base.py  client.py  entrust.py  server.py
docs/: api.md  installation.md  usage.md
latest/api/: index.html
latest/authors/: index.html
latest/history/: index.html
latest/installation/: index.html
tests/: __init__.py  test.py  test_types.py  test_zillionare_core_types.py
tests/errors/trade/: test_trade.py
zillionare_core_types/: __init__.py
zillionare_core_types/core/: quote_fetcher.py  types.py
